POM implement Wait, TMPage, LoginPage, HomePage

--- a/IC_TurnUpWeb/IC_TurnUpWeb.csproj
+++ b/IC_TurnUpWeb/IC_TurnUpWeb.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="129.0.6668.7000" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Utilities\" />
+    <Folder Include="Tests\" />
+  </ItemGroup>
+
 </Project>
