--- a/IC_TurnUpWeb/IC_TurnUpWeb.csproj
+++ b/IC_TurnUpWeb/IC_TurnUpWeb.csproj
@@ -8,14 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+    <PackageReference Include="NUnit" Version="4.2.2" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     <PackageReference Include="Selenium.Support" Version="4.25.0" />
     <PackageReference Include="Selenium.WebDriver" Version="4.25.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="129.0.6668.7000" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Utilities\" />
-    <Folder Include="Tests\" />
   </ItemGroup>
 
 </Project>
